argo-cd/app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: 050451387626.dkr.ecr.eu-west-2.amazonaws.com/eks-cluster:latest
        ports:
        - containerPort: 3000
        
---
# Service
apiVersion: v1
kind: Service   
metadata:
  name: app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "issuer" # This annotation tells cert-manager to use the letsencrypt ClusterIssuer for this Ingress
spec:
  ingressClassName: nginx # without this line, the Ingress may not be recognized by the NGINX Ingress Controller, its used to specify which Ingress controller should handle this Ingress resource
  rules:
    - host: eks.uzayr.uk # Replace with your actual domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80

  tls:
  - hosts:
    - eks.uzayr.uk # Replace with your actual domain
    secretName: eks-uzayr-tls # This is the secret that will store the TLS certificate
